<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        android:isScrollContainer="false"
        app:layout_constraintStart_toStartOf="@+id/pokemonTextView"
        app:layout_constraintTop_toBottomOf="@+id/pokemonTypeView"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/pokemonTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/pokemonName"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    \

    <TextView
        android:id="@+id/pokemonTypeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pokemonType"
        app:layout_constraintStart_toStartOf="@+id/pokemonTextView"
        app:layout_constraintTop_toBottomOf="@+id/pokemonTextView" />

    <TextView
        android:id="@+id/pokemonHPView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/pokemonHP"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/pokemonATKView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pokemonATK"
        app:layout_constraintStart_toStartOf="@+id/pokemonHPView"
        app:layout_constraintTop_toBottomOf="@+id/pokemonHPView" />

    <TextView
        android:id="@+id/pokemonDEFView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pokemonDEF"
        app:layout_constraintStart_toStartOf="@+id/pokemonATKView"
        app:layout_constraintTop_toBottomOf="@+id/pokemonATKView" />

    <TextView
        android:id="@+id/pokemonSPECATKView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pokemonSPECATK"
        app:layout_constraintStart_toStartOf="@+id/pokemonDEFView"
        app:layout_constraintTop_toBottomOf="@+id/pokemonDEFView" />

    <TextView
        android:id="@+id/pokemonSPECDEFView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/pokemonSPECDEF"
        app:layout_constraintStart_toStartOf="@+id/pokemonSPECATKView"
        app:layout_constraintTop_toBottomOf="@+id/pokemonSPECATKView" />

    <TextView
        android:id="@+id/pokemonSpeedView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/pokemonSPEED"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/pokemonSPECDEFView"
        app:layout_constraintTop_toBottomOf="@+id/pokemonSPECDEFView" />
</androidx.constraintlayout.widget.ConstraintLayout>